--- a/ClientEx2/App.config
+++ b/ClientEx2/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="ClientEx2.Properties.Settings.TI_UMYConnectionString"
+            connectionString="Data Source=EVERLESS;Initial Catalog=&quot;TI UMY&quot;;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
