--- a/ServerEx2/app.config
+++ b/ServerEx2/app.config
@@ -7,7 +7,7 @@
         <behaviors>
             <serviceBehaviors>
                 <behavior name="metadataBehavior()">
-                    <serviceMetadata />
+                    <serviceMetadata httpGetBinding="" />
                     <serviceDebug />
                 </behavior>
             </serviceBehaviors>
